[package]
name = "tla"
version = "0.1.2"
description = "A CLI tool for compressing and encrypting a file or directory. (tar, lzma, aes & des)"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "~3.0"
features = ["derive"]

[dependencies]
tar = "0.4"
xz2 = "0.1"
ades = "0.1"
aoko = "0.2"