[package]
name = "tla"
version = "0.1.10"
description = "A CLI tool for compressing and encrypting a file or a directory. (tar, lzma, aes & des)"
authors = ["hzqd <hzqelf@yeah.net>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/hzqd/tla"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.aoko]
version = "0.3.0-alpha.1"
features = ["paral"]

[dependencies]
tar = "0.4"
xz2 = "0.1"
ades = "0.1"
rayon = "1.5"
num_cpus = "1.13"